--- a/TODO
+++ b/TODO
@@ -1,26 +1,63 @@
-* remove C lang dependencies (currently used in threading for testing)
+# Active
 
-* Write documentation!
+    x. document ZeroMQ api
 
-* Get tests for upstream dependency libraries working again.
+    2. create the following codes:
 
-* Get cmake to generate the Task protobuf sources.
+      x dhub
+      x dquery
+      - dadd
+      - worker
 
-* Integrate testing into the build / pull request process.
+    3. create tests using api to run a simple workflow
 
-* List out minimal desired API for users of this libary.
+    4. implement documentation
 
-x. thread tasks through all phases of runtime
+    5. check tests
 
-2. create simple test workflow examples
+    6. performance benchmark
 
-3. codify actor behavior
+# Waiting TODO-s
 
-  - implement QueryMsg / hub interaction
+    *. Add a hub test.
 
-4. implement system health manager
+    *. Get cmake to generate the Task protobuf sources.
 
-5. implement stage-in copy jobs
+    *. Integrate testing into the build / pull request process.
 
-6. improve task I/O backend
+    *. List out minimal desired API for users of this libary.
+
+    *. create simple test workflow examples
+
+    *. codify actor behavior
+
+      - implement QueryMsg / hub interaction
+
+    *. implement system health manager
+
+    *. implement stage-in copy jobs
+
+    *. improve task I/O backend
+
+    *. implement graceful shutdown - write all tasks to
+       a file with the same format as 
+
+
+# Re-consider expanded scope:
+
+  * Central fields (already done):
+
+    - ready ~> list of "ready" <TaskID>s (removed when assigned)
+
+    - assigned/<Worker> ~> set of <TaskID>s assigned to worker
+
+  * Additional field to handle task-associated info (not implemented):
+
+    - waiting ~> set of "waiting" <TaskID>s (removed when ready)
+
+    - tasks/<TaskID> ~> protobuf <Task> message associated to <TaskID>
+
+  * Additional fields needed to handle work stealing:
+
+    - location/<TaskID> ~> (<Worker>, <Worker>) first and last-known owners of task
 
